src/snapshots/rstest_insta_macros__codegen__tests__context_binding__when_fn_contains_context_arg.snap
---
source: crates/macros/src/codegen.rs
expression: "test_helpers::pretty(expanded)"
---
fn my_test(#[context] my_context: Context) {
    println!("Hello, World!")
}
