src/snapshots/rstest_insta_macros__codegen__tests__context_binding__when_fn_does_not_contain_arg.snap
---
source: crates/macros/src/codegen.rs
expression: "test_helpers::pretty(expanded)"
---
fn my_test(#[context] __rstest_insta__ctx: Context) {
    println!("Hello, World!")
}
